tests/ui/parser/doc-before-semi.rs
fn main() {
    /// hi
    //~^ ERROR found a documentation comment that doesn't document anything
    //~| HELP if a comment was intended use `//`
    ;
}
